[package]
name = "controller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["runtime", "derive"] }
kube-runtime = { version = "0.83.0" }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
futures = "0.3.17"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
pbjson = "0.5.1"
prost = "0.11.9"
async-trait = "0.1.68"
thiserror = "1.0.40"


[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
prost-build = "0.11.9"
pbjson-build = "0.5.1"

